calender description overflow fixed

--- a/styles/page/_landing.scss
+++ b/styles/page/_landing.scss
@@ -167,11 +167,11 @@
 }
 
 
-.truncate-overflow p{
+.truncate-overflow p:not(:first-child) {
   @apply text-sm text-slate-500;
   width:100%;
   overflow: hidden;
-  display: -webkit-box;
+  display: none;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   margin-bottom: 10px;
